# haskell-book

./: .gitignore  Loci.hp  Loci.prof  ProfilingTime.prof  haskell-book.cabal
app/: Main.hs
src/: Addition.hs  Applicatives.hs  ApplyingStructure.hs  Chipher.hs  FizzBuzz.hs  Foldables.hs  Functors.hs  HttpStuff.hs  Ini.hs  Lib.hs  Marshalling.hs  MaybeEither.hs  Monads.hs  Morse.hs  NonStricness.hs  Parsers.hs  Playground.hs  QCheck.hs  RandomExample.hs  Readers.hs  Semigroups.hs  SemigroupsAndMonoids.hs  States.hs  Traversables.hs  UnfoldBTree.hs
src/ErrorHandling/: AsyncExceptions.hs  Exceptions.hs  OurExceptions.hs  StoppingTheParty.hs
src/Libraries/: Benchmarking.hs  DLists.hs  Loci.hs  ProfilingTime.hs  Queues.hs
src/Parsing/: Integers.hs  LogFiles.hs  PhoneNumbers.hs  SemanticVersion.hs
src/Transformers/: ComposingTypes.hs  Exercises.hs  FixTheCode.hs  HitCounter.hs  MonadTranses.hs  Morra.hs  ReaderMaybe.hs  ScottyEx.hs  Transformers.hs  UnwrapBigMonad.hs
test/: Spec.hs
