name:                haskell-book
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/haskell-book#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , Morse
  build-depends:       base >= 4.7 && < 5
                     , QuickCheck
                     , containers
                     , semigroups
                     , checkers
                     , time
                     , bytestring
                     , wreq
                     , http-types
                     , http2
                     , transformers
                     , random
                     , dlist
                     , trifecta
  default-language:    Haskell2010
  ghc-options:         -fwarn-incomplete-patterns
                       -fwarn-incomplete-uni-patterns
                       -fwarn-incomplete-record-updates

executable haskell-book-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -fwarn-tabs
  build-depends:       base
                     , haskell-book
  default-language:    Haskell2010

test-suite haskell-book-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , haskell-book
                     , containers
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/haskell-book
